@@ -59,6 +59,7 @@ Bug fixes
  * List-based fields within form builder form submissions are now displayed as comma-separated strings rather than as Python lists (Christine Ho, Matt Westcott)
  * The page type usage listing now have a translatable page title (Ramon de Jezus)
  * Styles for submission filtering form now have a consistent height. (Thijs Kramer)
+ * Slicing a search result set no longer loses the annotation added by `annotate_score` (Karl Hobley)
 
 
 Upgrade considerations
